--- a/app/src/main/res/layout/activity_button.xml
+++ b/app/src/main/res/layout/activity_button.xml
@@ -7,7 +7,7 @@
     tools:context=".ButtonActivity">
 
     <include
-        layout="@layout/toolbar"
+        layout="@layout/toolbar_button"
         android:id="@+id/toolbar"/>
 
 
