--- a/app/src/main/res/layout/activity_contact.xml
+++ b/app/src/main/res/layout/activity_contact.xml
@@ -7,7 +7,7 @@
     tools:context=".ContactActivity">
 
     <include
-        layout="@layout/toolbar"
+        layout="@layout/toolbar_button"
         android:id="@+id/toolbar"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
