--- a/app/src/main/res/layout/toolbar_contact.xml
+++ b/app/src/main/res/layout/toolbar_contact.xml
@@ -10,9 +10,10 @@
 
     <TextView
         android:id="@+id/tv_toolbar"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="버튼설정"
+        android:gravity="center"
+        android:text="보호자 연락처 설정"
         android:textColor="#ffffff"
         android:textSize="30sp"
         android:textStyle="bold"
