--- a/app/src/main/res/layout/activity_button.xml
+++ b/app/src/main/res/layout/activity_button.xml
@@ -10,7 +10,102 @@
         layout="@layout/toolbar_button"
         android:id="@+id/toolbar"/>
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar">
 
+        <TextView
+            android:id="@+id/tv_1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="보호자 문자"
+            android:textColor="#000000"
+            android:textSize="24sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <RadioGroup
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:orientation="horizontal"
+            app:layout_constraintStart_toStartOf="@+id/tv_1"
+            app:layout_constraintTop_toBottomOf="@id/tv_1">
+
+
+            <RadioButton
+                android:id="@+id/rb_1_1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="볼륨키↓ 3번" />
+
+            <RadioButton
+                android:id="@+id/rb_1_2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="볼륨키 ↑ 3번"
+                android:textColor="#000000" />
+
+        </RadioGroup>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayout5">
+
+        <TextView
+            android:id="@+id/tv_2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="긴급 문자"
+            android:textColor="#000000"
+            android:textSize="24sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <RadioGroup
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:orientation="horizontal"
+            app:layout_constraintStart_toStartOf="@+id/tv_2"
+            app:layout_constraintTop_toBottomOf="@id/tv_2">
+
+
+            <RadioButton
+                android:id="@+id/rb_2_1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="볼륨키↓ 3번" />
+
+            <RadioButton
+                android:id="@+id/rb_2_2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="볼륨키 ↑ 3번"
+                android:textColor="#000000" />
+
+        </RadioGroup>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:layout_marginTop="8dp"
+        android:background="#99122B"
+        android:text="저장"
+        android:textColor="#FFFFFF"
+        app:layout_constraintEnd_toEndOf="@+id/constraintLayout6"
+        app:layout_constraintStart_toStartOf="@+id/constraintLayout6"
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayout6" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
