--- a/app/src/main/res/layout/activity_contact.xml
+++ b/app/src/main/res/layout/activity_contact.xml
@@ -58,8 +58,9 @@
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginTop="4dp"
-            android:background="#99122B"
+            android:background="@drawable/btn_design"
             android:text="주소록"
+
             android:textColor="#FFFFFF"
             app:layout_constraintStart_toEndOf="@+id/et_1"
             app:layout_constraintTop_toTopOf="@+id/et_1" />
@@ -115,7 +116,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginTop="4dp"
-            android:background="#99122B"
+            android:background="@drawable/btn_design"
             android:text="주소록"
             android:textColor="#FFFFFF"
             app:layout_constraintStart_toEndOf="@+id/et_2"
@@ -172,7 +173,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginTop="4dp"
-            android:background="#99122B"
+            android:background="@drawable/btn_design"
             android:text="주소록"
             android:textColor="#FFFFFF"
             app:layout_constraintStart_toEndOf="@+id/et_3"
@@ -185,7 +186,7 @@
         android:layout_width="wrap_content"
         android:layout_height="40dp"
         android:layout_marginTop="8dp"
-        android:background="#99122B"
+        android:background="@drawable/btn_design"
         android:text="저장"
         android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="@+id/constraintLayout3"
