--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">#F8B2BF</color>
+    <color name="colorPrimaryDark">#99122b</color>
+    <color name="colorAccent">#FF5252</color>
+    <color name="colorTextPrimary">#212121</color>
+    <color name='colorTextSecondary'>#757575</color>
+    <color name='colorBackground'>#FFFFFF</color>
+    <color name="colorOnboardingIndicatorInactive">#99122b</color>
 </resources>
