--- a/app/src/main/res/layout/activity_setting_guide.xml
+++ b/app/src/main/res/layout/activity_setting_guide.xml
@@ -14,7 +14,7 @@
         android:layout_marginEnd="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginBottom="15dp"
-        android:textSize="15sp"
+        android:textSize="15dp"
         app:backgroundTint="#99122B"
         app:cornerRadius="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
