--- a/app/src/main/res/layout/activity_medical_information.xml
+++ b/app/src/main/res/layout/activity_medical_information.xml
@@ -15,22 +15,27 @@
         android:id="@+id/btn_save"
         android:layout_width="wrap_content"
         android:layout_height="40dp"
+        android:layout_marginTop="13dp"
         android:layout_marginBottom="56dp"
         android:background="@drawable/btn_design"
         android:text="저장"
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />
 
     <TableLayout
+        android:id="@+id/tableLayout"
         android:layout_width="384dp"
         android:layout_height="546dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="2dp"
+        android:layout_marginLeft="2dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="2dp"
         android:layout_marginRight="2dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.375"
+        app:layout_constraintHorizontal_bias="0.52"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar">
 
@@ -39,21 +44,131 @@
             android:layout_height="100dp">
 
             <TextView
-                android:id="@+id/textView5"
+                android:id="@+id/textview1"
                 android:layout_width="175dp"
-                android:layout_height="40dp"
+                android:layout_height="42dp"
                 android:gravity="center_vertical"
                 android:text=" 성"
                 android:textColor="#000000"
-                android:textSize="15sp" />
+                android:textSize="16sp" />
 
             <EditText
                 android:id="@+id/Input_FirstName"
                 android:layout_width="208dp"
-                android:layout_height="40dp"
+                android:layout_height="42dp"
                 android:gravity="center_vertical"
                 android:textColor="#000000"
-                android:textSize="15sp" />
+                android:textSize="16sp" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="wrap_content"
+                android:layout_height="42dp"
+                android:gravity="center_vertical"
+                android:text=" 이름"
+                android:textColor="#000000"
+                android:textSize="16sp" />
+
+            <EditText
+                android:id="@+id/Input_LastName"
+                android:layout_width="match_parent"
+                android:layout_height="42dp"
+                android:gravity="center_vertical"
+                android:textColor="#000000"
+                android:textSize="16sp" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="wrap_content"
+                android:layout_height="42dp"
+                android:gravity="center_vertical"
+                android:text=" 생년월일"
+                android:textColor="#000000"
+                android:textSize="16sp" />
+
+            <EditText
+                android:id="@+id/Input_Birth"
+                android:layout_width="match_parent"
+                android:layout_height="42dp"
+                android:gravity="center_vertical"
+                android:textColor="#000000"
+                android:textSize="16sp" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/textView4"
+                android:layout_width="wrap_content"
+                android:layout_height="42dp"
+                android:gravity="center_vertical"
+                android:text=" 성별"
+                android:textColor="#000000"
+                android:textSize="16sp" />
+
+            <Spinner
+                android:id="@+id/Input_Gender"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:entries="@array/gender"
+                android:prompt="성별 선택" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_width="wrap_content"
+                android:layout_height="42dp"
+                android:gravity="center_vertical"
+                android:text=" 혈액형"
+                android:textColor="#000000"
+                android:textSize="16sp" />
+
+            <Spinner
+                android:id="@+id/Input_blood"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:entries="@array/gender"
+                android:prompt="혈액형 선택" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/textView6"
+                android:layout_width="148dp"
+                android:layout_height="42dp"
+                android:gravity="center_vertical"
+                android:text=" 키"
+                android:textColor="#000000"
+                android:textSize="16sp" />
+
+            <EditText
+                android:id="@+id/Input_Tall"
+                android:layout_width="163dp"
+                android:layout_height="42dp"
+                android:gravity="center_vertical"
+                android:hint="cm"
+                android:inputType="number"
+                android:textColor="#000000"
+                android:textSize="16sp" />
         </TableRow>
 
         <TableRow
@@ -62,22 +177,90 @@
 
             <TextView
                 android:id="@+id/textView7"
-                android:layout_width="wrap_content"
-                android:layout_height="40dp"
+                android:layout_width="148dp"
+                android:layout_height="42dp"
                 android:gravity="center_vertical"
-                android:text=" 이름"
+                android:text=" 몸무게"
                 android:textColor="#000000"
-                android:textSize="15sp" />
+                android:textSize="16sp" />
 
             <EditText
-                android:id="@+id/Input_LastName"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
+                android:id="@+id/Input_Weight"
+                android:layout_width="163dp"
+                android:layout_height="42dp"
                 android:gravity="center_vertical"
+                android:hint="kg"
+                android:inputType="number"
                 android:textColor="#000000"
-                android:textSize="15sp" />
+                android:textSize="16sp" />
         </TableRow>
 
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="100dp">
+
+            <TextView
+                android:id="@+id/textview8"
+                android:layout_width="175dp"
+                android:layout_height="42dp"
+                android:gravity="center_vertical"
+                android:text=" 알레르기"
+                android:textColor="#000000"
+                android:textSize="16sp" />
+
+            <EditText
+                android:id="@+id/Input_Allergy"
+                android:layout_width="208dp"
+                android:layout_height="42dp"
+                android:gravity="center_vertical"
+                android:textColor="#000000"
+                android:textSize="16sp" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="100dp">
+
+            <TextView
+                android:id="@+id/textview9"
+                android:layout_width="175dp"
+                android:layout_height="42dp"
+                android:gravity="center_vertical"
+                android:text=" 복용 중인 약"
+                android:textColor="#000000"
+                android:textSize="16sp" />
+
+            <EditText
+                android:id="@+id/Input_Medicine"
+                android:layout_width="208dp"
+                android:layout_height="42dp"
+                android:gravity="center_vertical"
+                android:textColor="#000000"
+                android:textSize="16sp" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="100dp">
+
+            <TextView
+                android:id="@+id/textview10"
+                android:layout_width="175dp"
+                android:layout_height="42dp"
+                android:gravity="center_vertical"
+                android:text=" 기타"
+                android:textColor="#000000"
+                android:textSize="16sp" />
+        </TableRow>
+
+        <EditText
+            android:id="@+id/Input_Other"
+            android:layout_width="208dp"
+            android:layout_height="42dp"
+            android:gravity="center_vertical"
+            android:hint="위급 상황 시 가족에게 먼저 연락해주세요. "
+            android:textColor="#000000"
+            android:textSize="16sp" />
     </TableLayout>
 
 
