--- a/app/src/main/res/layout/activity_medical_information.xml
+++ b/app/src/main/res/layout/activity_medical_information.xml
@@ -123,7 +123,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:entries="@array/gender"
-                android:prompt="성별 선택" />
+                 />
         </TableRow>
 
         <TableRow
@@ -143,8 +143,8 @@
                 android:id="@+id/Input_blood"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:entries="@array/gender"
-                android:prompt="혈액형 선택" />
+                android:entries="@array/blood"
+                 />
         </TableRow>
 
         <TableRow
