--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,8 +7,12 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+
+
     <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
-        <item name="android:windowBackground">@drawable/splash</item>
+        <!--<item name="android:windowBackground">@drawable/splash</item>-->
+        <item name="android:windowBackground">@color/colorBackground</item>
     </style>
+
 
 </resources>
