--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,8 +10,8 @@
 
 
     <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
-        <!--<item name="android:windowBackground">@drawable/splash</item>-->
-        <item name="android:windowBackground">@color/colorBackground</item>
+        <item name="android:windowBackground">@drawable/splash</item>
+<!--        <item name="android:windowBackground">@color/colorBackground</item>-->
     </style>
 
 
